# dg-assistant

./: disc-db  justfile  main.py  pyproject.toml  test.db
assets/: pdga-approved-disc-golf-discs_2025-10-31T17-36-46.csv
